unpackaged/main/default/objects/User/fields/MDID__c.field-meta.xml
<CustomField>
    <fullName>MDID__c</fullName>
    <description>MDID for User</description>
    <label>MDID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>