unpackaged/main/default/objects/User/fields/simplesms__Textey_Default_From_Number__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Textey_Default_From_Number__c</fullName>
    <description>Storing Blackthorn Messaging phone number to use that as Default From Number.</description>
    <label>Blackthorn Messaging Default From Number</label>
    <type>Phone</type>
</CustomField>