unpackaged/main/default/objects/User/fields/User_Persona__c.field-meta.xml
<CustomField>
    <fullName>User_Persona__c</fullName>
    <label>User Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-College Advisor</fullName>
            </value>
            <value>
                <fullName>Student Success Advisor</fullName>
            </value>
            <value>
                <fullName>Info Center User</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Dean</fullName>
            </value>
            <value>
                <fullName>CNS</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Event User</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>