unpackaged/main/default/objects/User/listViews/All_Users.listView-meta.xml
<ListView>
    <fullName>All_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>User_Persona__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Users</label>
</ListView>