unpackaged/main/default/objects/User/listViews/Dean_DoR.listView-meta.xml
<ListView>
    <fullName>Dean_DoR</fullName>
    <booleanFilter>(1 OR 2) AND 3 AND 4</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.TITLE</field>
        <operation>contains</operation>
        <value>Dean</value>
    </filters>
    <filters>
        <field>CORE.USERS.TITLE</field>
        <operation>contains</operation>
        <value>Director</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>notEqual</operation>
        <value>kmcdani1</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>notEqual</operation>
        <value>sferre</value>
    </filters>
    <label>Dean &amp; DoR</label>
</ListView>