unpackaged/main/default/objects/User/listViews/Directors.listView-meta.xml
<ListView>
    <fullName>Directors</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>User_Persona__c</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_Persona__c</field>
        <operation>equals</operation>
        <value>Director</value>
    </filters>
    <label>Directors</label>
</ListView>