unpackaged/main/default/objects/User/listViews/Info_Center_Users.listView-meta.xml
<ListView>
    <fullName>Info_Center_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_Persona__c</field>
        <operation>equals</operation>
        <value>Info Center User</value>
    </filters>
    <label>Info Center Users</label>
</ListView>