unpackaged/main/default/objects/User/listViews/PCA.listView-meta.xml
<ListView>
    <fullName>PCA</fullName>
    <columns>FULL_NAME</columns>
    <columns>PCA_Assigned_Home_Campus__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PCA_Assigned_Home_Campus__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>PCA</label>
</ListView>