unpackaged/main/default/objects/User/listViews/SSA.listView-meta.xml
<ListView>
    <fullName>SSA</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>User_Persona__c</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>MDC Standard Platform</value>
    </filters>
    <label>SSA</label>
</ListView>