unpackaged/main/default/objects/User/listViews/West_Users.listView-meta.xml
<ListView>
    <fullName>West_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>PCA_Assigned_Home_Campus__c</columns>
    <columns>User_Persona__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CORE.USERS.DIVISION</field>
        <operation>equals</operation>
        <value>West</value>
    </filters>
    <label>West Users</label>
    <sharedTo>
        <group>CRM_Core_Team</group>
    </sharedTo>
</ListView>